# TypeSHI

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
Data/eval_cases/MDRun/: LFMMP.min.data  LFMP333.93.data  LFP333.coreshell.data  LFP333.min.data  LiNiO2-5000.data  NMC523.data
Data/eval_cases/MLFF/: Co3O4.poscar  Li23-NCM.poscar  Li2O.poscar  MnO2.poscar  NCM-poly.poscar  NCM333-1200K-Ovac.poscar  NCM333-Fe.poscar  NCM811-1200K-Ovac.poscar  NiO.poscar  (+3 more)
docs/: DATA.md  EVAL_CASES.md  EXPERIMENTS.md  EXPORT.md  MODEL.md  PLAN.md  REPORT.md  REPRODUCE.md
metal/: .gitignore  Package.swift  README.md
metal/parity/: README.md  check_edge_cases.py  decode_golden.json  eval_backends_local.py  eval_lite_local.py  eval_metal_local.py  gen_decode_golden.py  gen_reference.py  golden.json  onnx_bridge.py
metal/tools/: gen_decode_assets.py
scripts/: calibrate.py  evaluate_bench.py  evaluate_lite.py  evaluate_real.py  evaluate_wbm.py  exp_diffusion.py  export_model.py  make_md_frames.py  mine_costats.py  package_release.py  predict.py  predict_lite.py  preprocess_cod.py  preprocess_cosmos.py  preprocess_deepmd.py  preprocess_mptrj.py  repair_shards.py  smoke_test.py  train.py  verifier_check.py
scripts/inspect/: extxyz_scan_result.json  mptrj_scan_result.json  scan_extxyz.py  scan_mptrj.py
src/typeid2elem/: api.py  assets.py  augment.py  data.py  decode.py  descriptors.py  inference.py  io.py  model.py  model_diffusion.py  preprocess.py  units.py  verifier.py
weights/: README.md  calib.npz  costats.npz  env_codfull_sharp30.int8.onnx
(+11 files in other folders)
