[project]
name = "typeid2elem"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.29.0",
    "chgnet>=0.4.2",
    "ijson>=3.5.0",
    "lightning>=2.6.5",
    "mace-torch>=0.3.16",
    "matbench-discovery>=1.3.1",
    "matplotlib>=3.11.0",
    "matscipy>=1.2.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.7,<2.10",
    "tqdm>=4.68.3",
    "wandb>=0.28.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
export = [
    "coremltools>=9.0",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/typeid2elem"]
